syntax = "proto3";

package client;

message Message {
    string topic = 2;
    string message = 3;
    bool is_consistent = 4;
}

message Bool {
    bool value = 1;
}

message Empty {

}

service JasmineClient {
    rpc send_message (Message) returns (Bool);
    rpc ping (Empty) returns (Empty); 
}